--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,8 @@
         <activity android:name=".SellerTransactionActivty"/>
         <activity android:name=".TopUpPenjual"/>
         <activity android:name=".ProfilPenjual"/>
+        <activity android:name=".PayConfirmActivity"/>
+        <activity android:name=".ConfirmPenjualActivity"/>
 
     </application>
 
