--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         <activity android:name=".ProfilPenjual"/>
         <activity android:name=".PayConfirmActivity"/>
         <activity android:name=".ConfirmPenjualActivity"/>
+        <activity android:name=".ConfirmPembeliActivity"/>
 
     </application>
 
